# case-robco

./: README.md  justfile  pyproject.toml
app/: database.py  main.py
app/models/: robot.py
app/routers/v1/: foo.py  health.py  robots.py  status.py
app/schemas/: robot.py
app/tests/v1/: test_main.py  test_robots.py
k8s/monitoring/: values-grafana.yaml  values-loki.yaml  values-prometheus.yaml  values-promtail.yaml
k8s/robco/: manifest.yaml  namespace.yaml  postgres-db.yaml  robot-dashboard.yaml  robot-service.yaml
python-be/: .dockerignore  .env.template  Dockerfile  pyproject.toml
python-be/app/: __init__.py  config.py  database.py  init_db.py  main.py
python-be/app/models/: robot.py
python-be/app/routers/v1/: robots.py
python-be/app/schemas/: robot.py
react-fe/: .dockerignore  Dockerfile  package-lock.json  package.json
react-fe/src/: App.js  App.test.js  api.js
