[project]
name = "robot-service"
version = "0.1.0"
description = "robot-service API"
authors = [
    {name = "GustavJaner",email = "gustav.janer@gmail.com"}
]
license = {text = "Gustav Janér"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)"
]

[tool.poetry]
requires-poetry = ">=2.0"
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
