[project]
name = "robot-service"
version = "0.1.0"
description = "robot-service API"
authors = [
    {name = "GustavJaner",email = "gustav.janer@gmail.com"}
]
license = {text = "Gustav Janér"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
]

[tool.poetry]
requires-poetry = ">=2.0"
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pip-audit = "^2.9.0"
coverage = "^7.8.2"
alembic = "^1.16.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
